@@ -1,3 +1,12 @@
+2014-07-30  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/57397
+	* pt.c (unify_arity): Add boolean parameter.
+	(unify_too_few_arguments): Likewise.
+	(type_unification_real): Diagnose correctly insufficient
+	arguments in the presence of trailing variadic parameters;
+	deducing multiple trailing packs as empty is fine.
+
 2014-07-30  Jason Merrill  <jason@redhat.com>
 
 	PR c++/61659
